# project-skyhawk

./: Cargo.toml  LICENSE.txt  README.md
hawk_engine/: Cargo.toml  README.md
hawk_engine/src/: camera.rs  clock.rs  demos.rs  lib.rs  triangle.frag  triangle.vert
hawk_engine/src/input/: keyboard.rs  mod.rs  mouse.rs
hawk_engine/src/math/: matrix.rs  mod.rs  primative.rs  primitive.rs  rotation.rs  vector.rs
hawk_engine/src/mem/: mod.rs  sid.rs
hawk_engine/src/renderer/: color.rs  graphics.rs  mod.rs  open_gl.rs  shader.rs  vertex.rs
hawk_engine/src/renderer/opengl/: buffer.rs  mesh.rs  mod.rs  shader.rs  texture.rs  vertex.rs
hawk_engine/src/renderer/window/: sdl.rs
hawk_engine/src/time/: clock.rs  timer.rs
src/: main.rs
