[package]
name = "hawk_engine"
version = "0.1.0"
authors = ["Patrick M. Howard <pmontgomeryhoward@gmail.com>"]
edition = "2018"

build = "build.rs"

[profile.dev]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra-glm = "0.9.0"
gl = "*"
image = "*"
rand = "*"

[dependencies.sdl2]
version = "*"
default-features = false
features = ["use_mac_framework"]